Refactored CustomButton, added special char check

--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,4 +1,4 @@
-.custom-button {
+.scores-button {
   position: absolute;
   width: 494px;
   height: 136px;
@@ -17,7 +17,7 @@
   }
 }
 
-.submit{
+.submit-button{
 position: absolute;
 width: 494px;
 height: 136px;
